Settings page on mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -550,14 +550,16 @@ nav {
     font-weight: 500;
     padding-bottom: 5%;;
     margin-top: 100px;
-    padding-left: 2%;
     padding-right: 2%;
+    padding-left: 2%;
     margin-bottom: 50px;
 }
 
 @media (max-width: 767px) {
     .settings-main {
         margin-top: 50px;
+        padding-right: 15px;
+        padding-left: 15px;
         margin-bottom: 0;
         border-radius: 0;
         width: 100%;
